--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" />
+  <!-- FIX: ensure correct mobile scaling -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LINTECLOUD - Professional IT & Cloud Services</title>
   <meta name="description" content="LINTECLOUD provides expert IT services including cloud solutions, server management, networking, security, hardware support, and IT consulting for modern businesses." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,8 +13,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Floating Background Icons -->
+  <!-- Floating Background Icons (visual-only, aria-hidden) -->
   <div class="floating-element floating-1" aria-hidden="true"><i class="fas fa-cloud"></i></div>
   <div class="floating-element floating-2" aria-hidden="true"><i class="fas fa-server"></i></div>
   <div class="floating-element floating-3" aria-hidden="true"><i class="fas fa-network-wired"></i></div>
@@ -32,108 +32,110 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section id="hero" role="region" aria-label="Introduction">
-    <div id="particles-js" aria-hidden="true"></div>
-    <div class="hero-content fade-in">
-      <img src="lintecloud03.png" alt="LINTECLOUD IT Solutions Logo" class="hero-logo" />
-      <h1 class="hero-title">IT SOLUTIONS</h1>
-      <p class="hero-subtitle">Professional cloud services, server management, and IT consulting for modern businesses</p>
-      <a href="#services" class="cta-button"><i class="fas fa-rocket" aria-hidden="true"></i> Explore Our Services</a>
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section id="about" role="region" aria-label="About LINTECLOUD">
-    <div class="section-container fade-in">
-      <h2>About LINTECLOUD</h2>
-      <p class="about-text"><strong>LINTECLOUD IT Solutions</strong> empowers businesses with cloud solutions, server management, networking & security, IT consulting, and hardware support.</p>
-      <p class="about-text">We focus on reliability, innovation, and client-focused IT solutions tailored to every business.</p>
-    </div>
-  </section>
-
-  <!-- Services Section -->
-  <section id="services" role="region" aria-label="Our Services">
-    <div class="section-container fade-in">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <article class="service-card" tabindex="0">
-          <i class="fas fa-cloud service-icon" aria-hidden="true"></i>
-          <h3 class="service-title">Cloud Solutions</h3>
-          <p class="service-preview">AWS setup & migration</p>
-          <p class="service-detail">AWS EC2, S3, IAM, VPC, Route53. Cloud migration, automation, and high-availability deployments for scalable business growth.</p>
-        </article>
-
-        <article class="service-card" tabindex="0">
-          <i class="fas fa-server service-icon" aria-hidden="true"></i>
-          <h3 class="service-title">Server Management</h3>
-          <p class="service-preview">Linux & Windows server administration</p>
-          <p class="service-detail">Professional deployment & optimization of Linux & Windows servers. Web hosting solutions (HTTP, Nginx, IIS, cPanel), patching, and tuning.</p>
-        </article>
-
-        <article class="service-card" tabindex="0">
-          <i class="fas fa-shield-alt service-icon" aria-hidden="true"></i>
-          <h3 class="service-title">Networking & Security</h3>
-          <p class="service-preview">Firewall, LDAP, AD & enterprise security</p>
-          <p class="service-detail">Active Directory, LDAP integration, Nginx reverse proxy, firewall setup, enterprise antivirus solutions.</p>
-        </article>
-
-        <article class="service-card" tabindex="0">
-          <i class="fas fa-chart-line service-icon" aria-hidden="true"></i>
-          <h3 class="service-title">Monitoring & Backup</h3>
-          <p class="service-preview">Zabbix & OwnCloud storage</p>
-          <p class="service-detail">System monitoring dashboards with Zabbix. OwnCloud storage and Microsoft 365 backup solutions.</p>
-        </article>
-
-        <article class="service-card" tabindex="0">
-          <i class="fas fa-lightbulb service-icon" aria-hidden="true"></i>
-          <h3 class="service-title">IT Consulting</h3>
-          <p class="service-preview">Future-ready IT strategies</p>
-          <p class="service-detail">Infrastructure optimization, digital transformation, technology assessments, and scalable growth strategies.</p>
-        </article>
-
-        <article class="service-card" tabindex="0">
-          <i class="fas fa-laptop-medical service-icon" aria-hidden="true"></i>
-          <h3 class="service-title">Hardware Support</h3>
-          <p class="service-preview">PC & enterprise hardware maintenance</p>
-          <p class="service-detail">Diagnostics, repairs, upgrades, replacements, and preventive maintenance for desktops, laptops, and servers.</p>
-        </article>
+  <!-- Hero -->
+  <main>
+    <section id="hero" role="region" aria-label="Introduction">
+      <div id="particles-js" aria-hidden="true"></div>
+      <div class="hero-content fade-in">
+        <img src="lintecloud03.png" alt="LINTECLOUD IT Solutions Logo" class="hero-logo" />
+        <h1 class="hero-title">IT SOLUTIONS</h1>
+        <p class="hero-subtitle">Professional cloud services, server management, and IT consulting for modern businesses</p>
+        <a href="#services" class="cta-button"><i class="fas fa-rocket" aria-hidden="true"></i> Explore Our Services</a>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" role="region" aria-label="Contact Us">
-    <div class="section-container fade-in">
-      <h2>Get In Touch</h2>
-      <p class="contact-subtitle">Ready to transform your IT infrastructure? Let's discuss your project.</p>
-      <div class="contact-methods">
-        <div class="contact-item">
-          <a href="mailto:lintecloud@gmail.com" class="contact-icon" aria-label="Email LINTECLOUD"><i class="fas fa-envelope"></i></a>
-          <div class="contact-text">
-            <div class="contact-label">Email Us</div>
-            <div class="contact-value"><a href="mailto:lintecloud@gmail.com">lintecloud@gmail.com</a></div>
-          </div>
-        </div>
-        <div class="contact-item">
-          <a href="tel:+919876543210" class="contact-icon" aria-label="Call LINTECLOUD"><i class="fas fa-phone"></i></a>
-          <div class="contact-text">
-            <div class="contact-label">Call Us</div>
-            <div class="contact-value"><a href="tel:+919876543210">+91 98765 43210</a></div>
-          </div>
-        </div>
-        <div class="contact-item">
-          <a href="https://wa.me/919876543210" target="_blank" rel="noopener" class="contact-icon" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
-          <div class="contact-text">
-            <div class="contact-label">WhatsApp</div>
-            <div class="contact-value"><a href="https://wa.me/919876543210" target="_blank">Quick Chat</a></div>
-          </div>
+    <!-- About -->
+    <section id="about" role="region" aria-label="About LINTECLOUD">
+      <div class="section-container fade-in">
+        <h2>About LINTECLOUD</h2>
+        <p class="about-text"><strong>LINTECLOUD IT Solutions</strong> empowers businesses with cloud solutions, server management, networking & security, IT consulting, and hardware support.</p>
+        <p class="about-text">We focus on reliability, innovation, and client-focused IT solutions tailored to every business.</p>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section id="services" role="region" aria-label="Our Services">
+      <div class="section-container fade-in">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+          <article class="service-card" tabindex="0">
+            <i class="fas fa-cloud service-icon" aria-hidden="true"></i>
+            <h3 class="service-title">Cloud Solutions</h3>
+            <p class="service-preview">AWS setup & migration</p>
+            <p class="service-detail">AWS EC2, S3, IAM, VPC, Route53. Cloud migration, automation, and high-availability deployments for scalable business growth.</p>
+          </article>
+
+          <article class="service-card" tabindex="0">
+            <i class="fas fa-server service-icon" aria-hidden="true"></i>
+            <h3 class="service-title">Server Management</h3>
+            <p class="service-preview">Linux & Windows server administration</p>
+            <p class="service-detail">Professional deployment & optimization of Linux & Windows servers. Web hosting solutions (HTTP, Nginx, IIS, cPanel), patching, and tuning.</p>
+          </article>
+
+          <article class="service-card" tabindex="0">
+            <i class="fas fa-shield-alt service-icon" aria-hidden="true"></i>
+            <h3 class="service-title">Networking & Security</h3>
+            <p class="service-preview">Firewall, LDAP, AD & enterprise security</p>
+            <p class="service-detail">Active Directory, LDAP integration, Nginx reverse proxy, firewall setup, enterprise antivirus solutions.</p>
+          </article>
+
+          <article class="service-card" tabindex="0">
+            <i class="fas fa-chart-line service-icon" aria-hidden="true"></i>
+            <h3 class="service-title">Monitoring & Backup</h3>
+            <p class="service-preview">Zabbix & OwnCloud storage</p>
+            <p class="service-detail">System monitoring dashboards with Zabbix. OwnCloud storage and Microsoft 365 backup solutions.</p>
+          </article>
+
+          <article class="service-card" tabindex="0">
+            <i class="fas fa-lightbulb service-icon" aria-hidden="true"></i>
+            <h3 class="service-title">IT Consulting</h3>
+            <p class="service-preview">Future-ready IT strategies</p>
+            <p class="service-detail">Infrastructure optimization, digital transformation, technology assessments, and scalable growth strategies.</p>
+          </article>
+
+          <article class="service-card" tabindex="0">
+            <i class="fas fa-laptop-medical service-icon" aria-hidden="true"></i>
+            <h3 class="service-title">Hardware Support</h3>
+            <p class="service-preview">PC & enterprise hardware maintenance</p>
+            <p class="service-detail">Diagnostics, repairs, upgrades, replacements, and preventive maintenance for desktops, laptops, and servers.</p>
+          </article>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Back to Top Button -->
+    <!-- Contact -->
+    <section id="contact" role="region" aria-label="Contact Us">
+      <div class="section-container fade-in">
+        <h2>Get In Touch</h2>
+        <p class="contact-subtitle">Ready to transform your IT infrastructure? Let's discuss your project.</p>
+        <div class="contact-methods">
+          <div class="contact-item">
+            <a href="mailto:lintecloud@gmail.com" class="contact-icon" aria-label="Email LINTECLOUD"><i class="fas fa-envelope"></i></a>
+            <div class="contact-text">
+              <div class="contact-label">Email Us</div>
+              <div class="contact-value"><a href="mailto:lintecloud@gmail.com">lintecloud@gmail.com</a></div>
+            </div>
+          </div>
+          <div class="contact-item">
+            <a href="tel:+919876543210" class="contact-icon" aria-label="Call LINTECLOUD"><i class="fas fa-phone"></i></a>
+            <div class="contact-text">
+              <div class="contact-label">Call Us</div>
+              <div class="contact-value"><a href="tel:+919876543210">+91 98765 43210</a></div>
+            </div>
+          </div>
+          <div class="contact-item">
+            <a href="https://wa.me/919876543210" target="_blank" rel="noopener" class="contact-icon" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            <div class="contact-text">
+              <div class="contact-label">WhatsApp</div>
+              <div class="contact-value"><a href="https://wa.me/919876543210" target="_blank">Quick Chat</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Back to Top -->
   <button id="backToTop" aria-label="Back to top"><i class="fas fa-arrow-up"></i></button>
 
   <!-- Footer -->
@@ -144,7 +146,8 @@
     </div>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-  <script src="script.js"></script>
+  <!-- Particles library loaded conditionally by script. Script is deferred for non-blocking -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
