--- a/index.html
+++ b/index.html
@@ -2,132 +2,266 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <!-- FIX: ensure correct mobile scaling -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LINTECLOUD - Professional IT & Cloud Services</title>
-  <meta name="description" content="LINTECLOUD provides expert IT services including cloud solutions, server management, networking, security, hardware support, and IT consulting for modern businesses." />
+  <title>LINTECLOUD - Reliable IT & Cloud Solutions</title>
+  <meta name="description" content="Secure, scalable, and future-ready IT & Cloud services: server & OS management, AWS infrastructure, virtualization, identity, monitoring & security, and hosting." />
+
+  <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Floating Background Icons (visual-only, aria-hidden) -->
+  <!-- Floating background icons -->
   <div class="floating-element floating-1" aria-hidden="true"><i class="fas fa-cloud"></i></div>
   <div class="floating-element floating-2" aria-hidden="true"><i class="fas fa-server"></i></div>
   <div class="floating-element floating-3" aria-hidden="true"><i class="fas fa-network-wired"></i></div>
 
   <!-- Header -->
   <header id="header" role="banner">
-    <div class="logo-text" aria-label="LINTECLOUD Brand Name">LINTECLOUD</div>
-    <button id="menuToggle" aria-expanded="false" aria-controls="nav" aria-label="Toggle menu" class="menu-toggle">
+    <div class="logo-text" aria-label="LINTECLOUD">LINTECLOUD</div>
+    <button 
+      id="menuToggle" 
+      class="menu-toggle" 
+      aria-expanded="false" 
+      aria-controls="nav" 
+      aria-label="Toggle menu">
       <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
     <nav id="nav" role="navigation">
       <a href="#hero">Home</a>
       <a href="#about">About</a>
-      <a href="#services">Services</a>
+      <a href="#solutions">Solutions</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero -->
   <main>
+    <!-- Hero Section -->
     <section id="hero" role="region" aria-label="Introduction">
       <div id="particles-js" aria-hidden="true"></div>
       <div class="hero-content fade-in">
-        <img src="lintecloud03.png" alt="LINTECLOUD IT Solutions Logo" class="hero-logo" />
-        <h1 class="hero-title">IT SOLUTIONS</h1>
-        <p class="hero-subtitle">Professional cloud services, server management, and IT consulting for modern businesses</p>
-        <a href="#services" class="cta-button"><i class="fas fa-rocket" aria-hidden="true"></i> Explore Our Services</a>
+        <img src="lintecloud03.png" alt="LINTECLOUD Logo" class="hero-logo" />
+        <h1 class="hero-title">Reliable IT & Cloud Solutions</h1>
+        <p class="hero-subtitle">Simplifying IT. Securing Your Future.</p>
+        <a href="#solutions" class="cta-button">
+          <i class="fas fa-rocket"></i> Get Started
+        </a>
+        <p class="hero-trust">
+          Trusted technology solutions for businesses of all sizes. Secure, scalable, and future-ready IT infrastructure.
+        </p>
       </div>
     </section>
 
-    <!-- About -->
+    <!-- About Section -->
     <section id="about" role="region" aria-label="About LINTECLOUD">
       <div class="section-container fade-in">
-        <h2>About LINTECLOUD</h2>
-        <p class="about-text"><strong>LINTECLOUD IT Solutions</strong> empowers businesses with cloud solutions, server management, networking & security, IT consulting, and hardware support.</p>
-        <p class="about-text">We focus on reliability, innovation, and client-focused IT solutions tailored to every business.</p>
+        <h2>Who We Are</h2>
+        <p><strong>LINTECLOUD</strong> is a leading IT and cloud solutions provider. We simplify IT operations, enabling businesses to operate efficiently, securely, and without disruption.</p>
+        
+        <h3>Our Mission</h3>
+        <p>Deliver reliable, future-ready IT solutions so businesses can focus on growth while we handle the technology.</p>
+        
+        <h3>Our Vision</h3>
+        <p>To be recognized as a trusted IT partner, known for innovation, reliability, and customer success.</p>
       </div>
     </section>
 
-    <!-- Services -->
-    <section id="services" role="region" aria-label="Our Services">
+    <!-- Solutions Section -->
+    <section id="solutions" role="region" aria-label="Our Solutions">
       <div class="section-container fade-in">
-        <h2>Our Services</h2>
+        <h2>End-to-End IT & Cloud Services</h2>
         <div class="services-grid">
-          <article class="service-card" tabindex="0">
-            <i class="fas fa-cloud service-icon" aria-hidden="true"></i>
-            <h3 class="service-title">Cloud Solutions</h3>
-            <p class="service-preview">AWS setup & migration</p>
-            <p class="service-detail">AWS EC2, S3, IAM, VPC, Route53. Cloud migration, automation, and high-availability deployments for scalable business growth.</p>
+
+          <!-- Service: Server & OS Management -->
+          <article class="service-card" data-service>
+            <div class="service-head">
+              <i class="fas fa-server service-icon"></i>
+              <div class="service-title-wrap">
+                <h3 class="service-title">Server &amp; OS Management</h3>
+                <p class="service-preview">Linux &amp; Windows administration</p>
+              </div>
+              <button class="service-toggle" aria-label="Toggle details">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+            <ul class="service-points">
+              <li>Installation &amp; Patching</li>
+              <li>Performance Tuning</li>
+              <li>Security Hardening</li>
+              <li>High Availability</li>
+            </ul>
+            <div class="service-more">
+              Full lifecycle support for Linux (RedHat, CentOS, Ubuntu) and Windows Server. Installation, patching, performance tuning, and security hardening to keep your infrastructure stable and secure.
+            </div>
           </article>
 
-          <article class="service-card" tabindex="0">
-            <i class="fas fa-server service-icon" aria-hidden="true"></i>
-            <h3 class="service-title">Server Management</h3>
-            <p class="service-preview">Linux & Windows server administration</p>
-            <p class="service-detail">Professional deployment & optimization of Linux & Windows servers. Web hosting solutions (HTTP, Nginx, IIS, cPanel), patching, and tuning.</p>
+          <!-- Service: Cloud Infrastructure -->
+          <article class="service-card" data-service>
+            <div class="service-head">
+              <i class="fas fa-cloud service-icon"></i>
+              <div class="service-title-wrap">
+                <h3 class="service-title">Cloud Infrastructure</h3>
+                <p class="service-preview">AWS setup &amp; migration</p>
+              </div>
+              <button class="service-toggle" aria-label="Toggle details">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+            <ul class="service-points">
+              <li>Cloud Migration Strategy</li>
+              <li>Infrastructure as Code</li>
+              <li>Auto-scaling Solutions</li>
+              <li>Cost Optimization</li>
+            </ul>
+            <div class="service-more">
+              Scalable AWS deployments: EC2, S3, IAM, VPC, RDS, Route53. Designed for high uptime and cost efficiency.
+            </div>
           </article>
 
-          <article class="service-card" tabindex="0">
-            <i class="fas fa-shield-alt service-icon" aria-hidden="true"></i>
-            <h3 class="service-title">Networking & Security</h3>
-            <p class="service-preview">Firewall, LDAP, AD & enterprise security</p>
-            <p class="service-detail">Active Directory, LDAP integration, Nginx reverse proxy, firewall setup, enterprise antivirus solutions.</p>
+          <!-- Service: Virtualization & VDI -->
+          <article class="service-card" data-service>
+            <div class="service-head">
+              <i class="fas fa-desktop service-icon"></i>
+              <div class="service-title-wrap">
+                <h3 class="service-title">Virtualization &amp; VDI</h3>
+                <p class="service-preview">VMware, KVM, VDI setups</p>
+              </div>
+              <button class="service-toggle" aria-label="Toggle details">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+            <ul class="service-points">
+              <li>Optimized Resource Usage</li>
+              <li>Remote Desktop Access</li>
+              <li>Secure Virtual Machines</li>
+              <li>Centralized Management</li>
+            </ul>
+            <div class="service-more">
+              VMware, KVM, and Virtual Desktop Infrastructure for resource optimization and seamless remote access.
+            </div>
           </article>
 
-          <article class="service-card" tabindex="0">
-            <i class="fas fa-chart-line service-icon" aria-hidden="true"></i>
-            <h3 class="service-title">Monitoring & Backup</h3>
-            <p class="service-preview">Zabbix & OwnCloud storage</p>
-            <p class="service-detail">System monitoring dashboards with Zabbix. OwnCloud storage and Microsoft 365 backup solutions.</p>
+          <!-- Service: Identity Management -->
+          <article class="service-card" data-service>
+            <div class="service-head">
+              <i class="fas fa-user-shield service-icon"></i>
+              <div class="service-title-wrap">
+                <h3 class="service-title">Identity Management</h3>
+                <p class="service-preview">Centralized access control</p>
+              </div>
+              <button class="service-toggle" aria-label="Toggle details">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+            <ul class="service-points">
+              <li>Active Directory Integration</li>
+              <li>LDAP Authentication</li>
+              <li>Role-Based Access</li>
+              <li>Secure Provisioning</li>
+            </ul>
+            <div class="service-more">
+              Centralized authentication with Active Directory and LDAP for secure enterprise-wide access.
+            </div>
           </article>
 
-          <article class="service-card" tabindex="0">
-            <i class="fas fa-lightbulb service-icon" aria-hidden="true"></i>
-            <h3 class="service-title">IT Consulting</h3>
-            <p class="service-preview">Future-ready IT strategies</p>
-            <p class="service-detail">Infrastructure optimization, digital transformation, technology assessments, and scalable growth strategies.</p>
+          <!-- Service: Monitoring & Security -->
+          <article class="service-card" data-service>
+            <div class="service-head">
+              <i class="fas fa-shield-alt service-icon"></i>
+              <div class="service-title-wrap">
+                <h3 class="service-title">Monitoring &amp; Security</h3>
+                <p class="service-preview">Zabbix &amp; cloud security</p>
+              </div>
+              <button class="service-toggle" aria-label="Toggle details">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+            <ul class="service-points">
+              <li>Real-time Monitoring</li>
+              <li>Backup &amp; Recovery</li>
+              <li>Microsoft 365 Migration</li>
+              <li>Threat Protection</li>
+            </ul>
+            <div class="service-more">
+              Proactive system monitoring with Zabbix and secure collaboration with OwnCloud. Includes Microsoft 365 migration support and enterprise security best practices.
+            </div>
           </article>
 
-          <article class="service-card" tabindex="0">
-            <i class="fas fa-laptop-medical service-icon" aria-hidden="true"></i>
-            <h3 class="service-title">Hardware Support</h3>
-            <p class="service-preview">PC & enterprise hardware maintenance</p>
-            <p class="service-detail">Diagnostics, repairs, upgrades, replacements, and preventive maintenance for desktops, laptops, and servers.</p>
+          <!-- Service: Web & Hosting -->
+          <article class="service-card" data-service>
+            <div class="service-head">
+              <i class="fas fa-globe service-icon"></i>
+              <div class="service-title-wrap">
+                <h3 class="service-title">Web &amp; Hosting</h3>
+                <p class="service-preview">High-performance hosting</p>
+              </div>
+              <button class="service-toggle" aria-label="Toggle details">
+                <i class="fas fa-chevron-down"></i>
+              </button>
+            </div>
+            <ul class="service-points">
+              <li>SSL &amp; Security Hardening</li>
+              <li>Continuous Optimization</li>
+              <li>Scalable Hosting Plans</li>
+              <li>Enterprise Reliability</li>
+            </ul>
+            <div class="service-more">
+              High-performance hosting via Nginx, IIS, and cPanel with SSL, security hardening, and continuous performance optimization.
+            </div>
           </article>
+
         </div>
       </div>
     </section>
 
-    <!-- Contact -->
+    <!-- Contact Section -->
     <section id="contact" role="region" aria-label="Contact Us">
       <div class="section-container fade-in">
         <h2>Get In Touch</h2>
-        <p class="contact-subtitle">Ready to transform your IT infrastructure? Let's discuss your project.</p>
+        <p class="contact-subtitle">We’re ready to support your IT and cloud journey. Connect with us today:</p>
+
         <div class="contact-methods">
+          <!-- Contact: Email -->
           <div class="contact-item">
-            <a href="mailto:lintecloud@gmail.com" class="contact-icon" aria-label="Email LINTECLOUD"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:lintecloud@gmail.com" class="contact-icon" aria-label="Email LINTECLOUD">
+              <i class="fas fa-envelope"></i>
+            </a>
             <div class="contact-text">
-              <div class="contact-label">Email Us</div>
-              <div class="contact-value"><a href="mailto:lintecloud@gmail.com">lintecloud@gmail.com</a></div>
+              <div class="contact-label">Email</div>
+              <div class="contact-value">
+                <a class="brand-link" href="mailto:lintecloud@gmail.com">lintecloud@gmail.com</a>
+              </div>
             </div>
           </div>
+
+          <!-- Contact: Phone -->
           <div class="contact-item">
-            <a href="tel:+919876543210" class="contact-icon" aria-label="Call LINTECLOUD"><i class="fas fa-phone"></i></a>
+            <a href="tel:+919876543210" class="contact-icon" aria-label="Call LINTECLOUD">
+              <i class="fas fa-phone"></i>
+            </a>
             <div class="contact-text">
-              <div class="contact-label">Call Us</div>
-              <div class="contact-value"><a href="tel:+919876543210">+91 98765 43210</a></div>
+              <div class="contact-label">Call</div>
+              <div class="contact-value">
+                <a class="brand-link" href="tel:+919876543210">+91 98765 43210</a>
+              </div>
             </div>
           </div>
+
+          <!-- Contact: WhatsApp -->
           <div class="contact-item">
-            <a href="https://wa.me/919876543210" target="_blank" rel="noopener" class="contact-icon" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/919876543210" target="_blank" rel="noopener" class="contact-icon" aria-label="Chat on WhatsApp">
+              <i class="fab fa-whatsapp"></i>
+            </a>
             <div class="contact-text">
               <div class="contact-label">WhatsApp</div>
-              <div class="contact-value"><a href="https://wa.me/919876543210" target="_blank">Quick Chat</a></div>
+              <div class="contact-value">
+                <a class="brand-link" href="https://wa.me/919876543210" target="_blank">Quick Chat</a>
+              </div>
             </div>
           </div>
         </div>
@@ -135,18 +269,20 @@
     </section>
   </main>
 
-  <!-- Back to Top -->
-  <button id="backToTop" aria-label="Back to top"><i class="fas fa-arrow-up"></i></button>
+  <!-- Back to Top Button -->
+  <button id="backToTop" aria-label="Back to top">
+    <i class="fas fa-arrow-up"></i>
+  </button>
 
   <!-- Footer -->
   <footer role="contentinfo">
     <div class="footer-content">
-      <p>&copy; 2025 LINTECLOUD IT SOLUTIONS. All rights reserved.</p>
-      <p class="footer-tagline">Empowering businesses with innovative IT solutions</p>
+      <p>&copy; 2025 LINTECLOUD. All Rights Reserved.</p>
+      <p class="footer-tagline">Your IT. Our Expertise.</p>
     </div>
   </footer>
 
-  <!-- Particles library loaded conditionally by script. Script is deferred for non-blocking -->
+  <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" defer></script>
   <script src="script.js" defer></script>
 </body>
